- banco de dados
- ajuste no banco de dados em geral
- criação de mestodos getUser, dbStatus, registerUser.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
-        "target": "es2016",
+        "noEmitOnError": true,
+        "removeComments": true,
+        "target": "es5",
         "module": "commonjs",
         "outDir": "build",
     }
